--- a/SecureWalk/src/app/components/encuestapregunta/listarencuestapregunta/listarencuestapregunta.component.html
+++ b/SecureWalk/src/app/components/encuestapregunta/listarencuestapregunta/listarencuestapregunta.component.html
@@ -1,46 +1,74 @@
-<div class="container">
-  <h1 class="titulo">Relaciones Encuesta-Pregunta (Slider)</h1>
+<div class="main-container">
+  <div class="top-header-section">
+    <div class="title-search-block">
+      <h1 class="page-title">Relaciones Encuesta-Pregunta</h1>
+      </div>
+  </div>
 
-  <div *ngIf="encuestaPregunta.length > 0; else noDataFound" class="slider-container">
-    <owl-carousel-o [options]="customOptions">
-      <ng-template carouselSlide *ngFor="let ep of encuestaPregunta">
-        <mat-card class="usuario-card">
+  <div class="content-cards-section">
+    <div *ngIf="encuestaPregunta && encuestaPregunta.length > 0; else noDataFound">
+      <div class="cards-grid">
+        <mat-card class="encuesta-pregunta-card" *ngFor="let ep of encuestaPregunta">
           <mat-card-header>
             <mat-card-title>
-              Relación ID: {{ ep.idEncuestaPregunta }}
+              <mat-icon class="card-title-icon">link</mat-icon> Relación ID:
+              {{ ep.idEncuestaPregunta }}
             </mat-card-title>
             <mat-card-subtitle>
-              Encuesta: {{ ep.encuesta.nombreEncuesta}} (ID: {{ ep.encuesta.idEncuesta}})
+              <mat-icon class="card-subtitle-icon">poll</mat-icon> Encuesta:
+              {{ ep.encuesta.nombreEncuesta }} (ID: {{ ep.encuesta.idEncuesta }})
             </mat-card-subtitle>
           </mat-card-header>
 
           <mat-card-content>
             <div>
-              <p><strong>Texto de Pregunta:</strong> {{ ep.pregunta.textoPregunta }}</p>
-              <p><strong>Tipo de Pregunta:</strong> {{ ep.pregunta.tipoPregunta }}</p>
-              <p><small>ID Pregunta: {{ ep.pregunta.idPregunta}}</small></p>
+              <p>
+                <mat-icon class="card-icon">Youtube</mat-icon
+                ><strong> Texto de Pregunta:</strong> {{ ep.pregunta.textoPregunta }}
+              </p>
+              <p>
+                <mat-icon class="card-icon">category</mat-icon
+                ><strong> Tipo de Pregunta:</strong> {{ ep.pregunta.tipoPregunta }}
+              </p>
+              <p>
+                <mat-icon class="card-icon">vpn_key</mat-icon><small>ID Pregunta:</small>
+                {{ ep.pregunta.idPregunta }}
+              </p>
             </div>
           </mat-card-content>
 
           <mat-card-actions>
-            <!-- Botón para eliminar la relación EncuestaPregunta -->
             <button mat-raised-button color="warn" (click)="eliminar(ep.idEncuestaPregunta)">
-              <mat-icon>delete_forever</mat-icon>
+              <mat-icon>delete_forever</mat-icon> Eliminar
             </button>
-            <button mat-raised-button color="primary" [routerLink]="['ediciones', ep.idEncuestaPregunta]">
-              <mat-icon>edit</mat-icon>
+            <button
+              mat-raised-button
+              color="primary"
+              [routerLink]="['ediciones', ep.idEncuestaPregunta]"
+            >
+              <mat-icon>edit</mat-icon> Editar
             </button>
           </mat-card-actions>
         </mat-card>
-      </ng-template>
-    </owl-carousel-o>
-  </div>
+      </div>
 
-  <!-- Plantilla que se muestra si no se encuentran datos -->
-  <ng-template #noDataFound>
-    <div class="no-data-container">
-      <p>No se encontraron relaciones Encuesta-Pregunta para mostrar.</p>
-      <mat-icon class="no-data-icon">sentiment_dissatisfied</mat-icon>
+      <mat-paginator
+        [length]="encuestaPregunta ? encuestaPregunta.length : 0"
+        [pageSize]="3"
+        [pageSizeOptions]="[3, 6, 9, 12]"
+        aria-label="Seleccionar página de relaciones Encuesta-Pregunta"
+        class="user-paginator"
+      >
+      </mat-paginator>
     </div>
-  </ng-template>
+
+    <ng-template #noDataFound>
+      <div class="no-data-container">
+        <p>No se encontraron relaciones Encuesta-Pregunta para mostrar.</p>
+        <mat-icon class="no-data-icon">sentiment_dissatisfied</mat-icon>
+      </div>
+    </ng-template>
+  </div>
 </div>
+
+<footer class="app-footer"></footer>
