--- a/SecureWalk/src/app/components/comentario/listarcomentario/listarcomentario.component.html
+++ b/SecureWalk/src/app/components/comentario/listarcomentario/listarcomentario.component.html
@@ -1,27 +1,50 @@
-<div class="container">
-    <div>
-        <h1 class="titulo">Lista de comentarios</h1>
+<div class="main-container">
+  <div class="top-header-section">
+    <div class="title-search-block">
+      <h1 class="page-title">Lista de Comentarios</h1>
+      </div>
+  </div>
+
+  <div class="content-cards-section">
+    <div class="cards-grid">
+      <mat-card class="comment-card" *ngFor="let comentario of comentarios">
+        <mat-card-header>
+          <mat-card-title>{{ comentario.idComentario }}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <p>
+            <mat-icon class="card-icon">description</mat-icon> Descripción:
+            {{ comentario.descripcionComentario }}
+          </p>
+          <p>
+            <mat-icon class="card-icon">forum</mat-icon> Post:
+            {{ comentario.post.descripcionPost }}
+          </p>
+          <p>
+            <mat-icon class="card-icon">person</mat-icon> Usuario:
+            {{ comentario.usuario.nombreUsuario }}
+          </p>
+          </mat-card-content>
+        <mat-card-actions>
+          <button mat-button color="primary" [routerLink]="['ediciones', comentario.idComentario]">
+            <mat-icon>edit</mat-icon> Editar
+          </button>
+          <button mat-button color="warn" (click)="eliminar(comentario.idComentario)">
+            <mat-icon>delete_forever</mat-icon> Eliminar
+          </button>
+        </mat-card-actions>
+      </mat-card>
     </div>
-    <div class="slider-container">
-        <owl-carousel-o [options]="customOptions">
-            <ng-template carouselSlide *ngFor="let comentario of comentarios">
-                <mat-card class="usuario-card">
-                    <mat-card-header>
-                        <mat-card-title>{{ comentario.idComentario }}</mat-card-title>
-                    </mat-card-header>
-                    <mat-card-content>
-                        <p>Descripcion de Comentario: {{ comentario.descripcionComentario }}</p>
-                        <p>Descripcion de Post: {{ comentario.post.descripcionPost }}</p>
-                        <p>Usuario: {{ comentario.usuario.nombreUsuario }}</p>
-                    </mat-card-content>
-                    <mat-card-actions>
-                        <button mat-button color="primary"
-                            [routerLink]="['ediciones', comentario.idComentario]"><mat-icon>edit</mat-icon></button>
-                        <button mat-button color="warn"
-                            (click)="eliminar(comentario.idComentario)"><mat-icon>delete_forever</mat-icon></button>
-                    </mat-card-actions>
-                </mat-card>
-            </ng-template>
-        </owl-carousel-o>
-    </div>
+
+    <mat-paginator
+      [length]="comentarios ? comentarios.length : 0"
+      [pageSize]="3"
+      [pageSizeOptions]="[3, 6, 9, 12]"
+      aria-label="Seleccionar página de comentarios"
+      class="user-paginator"
+    >
+    </mat-paginator>
+  </div>
 </div>
+
+<footer class="app-footer"></footer>
