--- a/SecureWalk/src/app/components/incidente/listarincidente/listarincidente.component.html
+++ b/SecureWalk/src/app/components/incidente/listarincidente/listarincidente.component.html
@@ -1,25 +1,45 @@
-<div class="container">
-    <div>
-        <h1 class="titulo">Lista de incidentes</h1>
-    </div>
- <div class="slider-container">
-  <owl-carousel-o [options]="customOptions">
-    <ng-template carouselSlide *ngFor="let incidente of incidentes">
-      <mat-card class="usuario-card">
+<div class="main-container">
+  <div class="top-header-section">
+    <div class="title-search-block">
+      <h1 class="page-title">Lista de Incidentes</h1>
+      </div>
+  </div>
+
+  <div class="content-cards-section">
+    <div class="cards-grid">
+      <mat-card class="incident-card" *ngFor="let incidente of incidentes">
         <mat-card-header>
           <mat-card-title>{{ incidente.idIncidente }}</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-          <p>Fecha de registro: {{ incidente.fechaIncidente }}</p>
-          <p>Usuario: {{ incidente.usuario.nombreUsuario }}</p>
-        </mat-card-content>
+          <p>
+            <mat-icon class="card-icon">event</mat-icon> Fecha de registro:
+            {{ incidente.fechaIncidente }}
+          </p>
+          <p>
+            <mat-icon class="card-icon">person</mat-icon> Usuario:
+            {{ incidente.usuario.nombreUsuario }}
+          </p>
+          </mat-card-content>
         <mat-card-actions>
-          <button mat-button color="primary" [routerLink]="['ediciones', incidente.idIncidente]"><mat-icon>edit</mat-icon></button>
-          <button mat-button color="warn" (click)="eliminar(incidente.idIncidente)"><mat-icon>delete_forever</mat-icon></button>
+          <button mat-button color="primary" [routerLink]="['ediciones', incidente.idIncidente]">
+            <mat-icon>edit</mat-icon> Editar
+          </button>
+          <button mat-button color="warn" (click)="eliminar(incidente.idIncidente)">
+            <mat-icon>delete_forever</mat-icon> Eliminar
+          </button>
         </mat-card-actions>
       </mat-card>
-    </ng-template>
-  </owl-carousel-o>
+    </div>
+
+    <mat-paginator
+      [length]="incidentes ? incidentes.length : 0" [pageSize]="3"
+      [pageSizeOptions]="[3, 6, 9, 12]"
+      aria-label="Seleccionar página de incidentes"
+      class="user-paginator"
+    >
+    </mat-paginator>
+  </div>
 </div>
-</div>
-  
+
+<footer class="app-footer"></footer>
