--- a/SecureWalk/src/app/components/post/listarpost/listarpost.component.html
+++ b/SecureWalk/src/app/components/post/listarpost/listarpost.component.html
@@ -1,26 +1,46 @@
-<div class="container">
-    <div>
-        <h1 class="titulo">Lista de post</h1>
+<div class="main-container">
+  <div class="top-header-section">
+    <div class="title-search-block">
+      <h1 class="page-title">Lista de Posts</h1>
+      </div>
+  </div>
+
+  <div class="content-cards-section">
+    <div class="cards-grid">
+      <mat-card class="post-card" *ngFor="let post of posts">
+        <mat-card-header>
+          <mat-card-title>{{ post.idPost }}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <p>
+            <mat-icon class="card-icon">description</mat-icon> Descripción:
+            {{ post.descripcionPost }}
+          </p>
+          <p>
+            <mat-icon class="card-icon">person</mat-icon> Usuario:
+            {{ post.usuario.nombreUsuario }}
+          </p>
+          </mat-card-content>
+        <mat-card-actions>
+          <button mat-button color="primary" [routerLink]="['ediciones', post.idPost]">
+            <mat-icon>edit</mat-icon> Editar
+          </button>
+          <button mat-button color="warn" (click)="eliminar(post.idPost)">
+            <mat-icon>delete_forever</mat-icon> Eliminar
+          </button>
+        </mat-card-actions>
+      </mat-card>
     </div>
-    <div class="slider-container">
-        <owl-carousel-o [options]="customOptions">
-            <ng-template carouselSlide *ngFor="let post of posts">
-                <mat-card class="usuario-card">
-                    <mat-card-header>
-                        <mat-card-title>{{ post.idPost }}</mat-card-title>
-                    </mat-card-header>
-                    <mat-card-content>
-                        <p>descripcion de post: {{ post.descripcionPost }}</p>
-                        <p>Usuario: {{ post.usuario.nombreUsuario }}</p>
-                    </mat-card-content>
-                    <mat-card-actions>
-                        <button mat-button color="primary"
-                            [routerLink]="['ediciones', post.idPost]"><mat-icon>edit</mat-icon></button>
-                        <button mat-button color="warn"
-                            (click)="eliminar(post.idPost)"><mat-icon>delete_forever</mat-icon></button>
-                    </mat-card-actions>
-                </mat-card>
-            </ng-template>
-        </owl-carousel-o>
-    </div>
+
+    <mat-paginator
+      [length]="posts ? posts.length : 0"
+      [pageSize]="3"
+      [pageSizeOptions]="[3, 6, 9, 12]"
+      aria-label="Seleccionar página de posts"
+      class="user-paginator"
+    >
+    </mat-paginator>
+  </div>
 </div>
+
+<footer class="app-footer"></footer>
